--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "grunt": "~0.4.1",
     "matchdep": "~0.1.2",
     "grunt-open": "~0.2.2",
-    "grunt-contrib-connect": "~0.4.0",
+    "grunt-contrib-connect": "~0.4.0"
   }
 }
