--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "body-parser": "^1.12.0",
     "chai": "^2.1.1",
+    "chai-as-promised": "^4.3.0",
     "express": "^4.12.2",
     "gulp": "^3.8.11",
     "gulp-eslint": "^0.6.0",
@@ -35,6 +36,7 @@
   "dependencies": {
     "bootstrap": "^3.3.2",
     "chai-jquery": "^2.0.0",
-    "jquery": "^2.1.3"
+    "jquery": "^2.1.3",
+    "whatwg-fetch": "^0.7.0"
   }
 }
