--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.2",
+    "bower": "^1.3.12",
     "chai-jquery": "^2.0.0",
     "jquery": "^2.1.3",
     "whatwg-fetch": "^0.7.0"
