--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   "homepage": "https://github.com/mixi-inc/JavaScriptTraining",
   "devDependencies": {
     "body-parser": "^1.12.0",
-    "chai": "^2.1.1",
-    "chai-as-promised": "^4.3.0",
     "express": "^4.12.2",
     "gulp": "^3.8.11",
     "gulp-eslint": "^0.6.0",
@@ -30,14 +28,9 @@
     "gulp-nodemon": "^1.0.5",
     "gulp-run": "^1.6.6",
     "gulp-util": "^3.0.4",
-    "mocha": "^2.2.0",
     "mocha-phantomjs": "^3.5.3"
   },
   "dependencies": {
-    "bootstrap": "^3.3.2",
-    "bower": "^1.3.12",
-    "chai-jquery": "^2.0.0",
-    "jquery": "^2.1.3",
-    "whatwg-fetch": "^0.7.0"
+    "bower": "^1.3.12"
   }
 }
