--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
   "homepage": "https://github.com/mixi-inc/JavaScriptTraining",
   "devDependencies": {
     "body-parser": "^1.12.0",
+    "event-stream": "^3.3.0",
     "express": "^4.12.2",
     "gulp": "^3.8.11",
+    "gulp-csslint": "^0.1.5",
     "gulp-eslint": "^0.6.0",
     "gulp-help": "^1.3.3",
     "gulp-nodemon": "^1.0.5",
     "gulp-run": "^1.6.6",
     "gulp-util": "^3.0.4",
-    "mocha-phantomjs": "^3.5.3"
+    "merge-stream": "^0.1.7",
+    "mocha-phantomjs": "^3.5.3",
+    "stream-combiner2": "^1.0.2"
   },
   "dependencies": {
     "bower": "^1.3.12"
