--- a/public/bower.json
+++ b/public/bower.json
@@ -30,6 +30,7 @@
     "chai-jquery": "~2.0.0",
     "jquery": "~2.1.3",
     "fetch": "~0.7.0",
-    "github-fork-ribbon-css": "~0.1.1"
+    "github-fork-ribbon-css": "~0.1.1",
+    "Buttons": "~2.0.0"
   }
 }
