--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "setup": "npm install; (cd public; bower install)",
     "help": "$(npm bin)/gulp help",
-    "serve": "$(npm bin)/gulp serve"
+    "serve": "$(npm bin)/gulp serve",
+    "presentation": "$(npm bin)/reveal-md README.md --separator '^\\n\\n\\n' --verticalSeparator '^\\n\\n'"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "stream-combiner2": "^1.0.2"
   },
   "dependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "reveal-md": "0.0.16"
   }
 }
