--- a/public/bower.json
+++ b/public/bower.json
@@ -6,10 +6,6 @@
     "Kuniwak <yuki.kokubun@mixi.co.jp>"
   ],
   "description": "Training course repositry for JavaScript by mixi",
-  "main": "index.html",
-  "moduleType": [
-    "globals"
-  ],
   "keywords": [
     "training"
   ],
@@ -30,7 +26,6 @@
     "chai-jquery": "~2.0.0",
     "jquery": "~2.1.3",
     "fetch": "~0.7.0",
-    "github-fork-ribbon-css": "~0.1.1",
-    "Buttons": "~2.0.0"
+    "github-fork-ribbon-css": "~0.1.1"
   }
 }
