--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Training course repository for JavaScript by mixi",
   "main": "index.js",
   "scripts": {
-    "setup": "npm install; (cd public; bower install)",
+    "postinstall": "(cd public; $(npm bin)/bower install)",
     "help": "$(npm bin)/gulp help",
     "serve": "$(npm bin)/gulp serve",
     "presentation": "$(npm bin)/reveal-md README.md --theme solarized --separator '^\\n\\n\\n' --verticalSeparator '^\\n\\n'"
