--- a/public/stage5/.eslintrc
+++ b/public/stage5/.eslintrc
@@ -1,13 +1,6 @@
 {
-  "env": {
-    "browser": true,
-    "mocha": true
-  },
   "globals": {
-    "$": false,
-    "jQuery": false,
     "fetch": false,
-    "Promise": false,
-    "HTMLCollection": false
+    "Promise": false
   }
 }
