--- a/public/stage6/.eslintrc
+++ b/public/stage6/.eslintrc
@@ -1,17 +1,10 @@
 {
-  "env": {
-    "browser": true,
-    "mocha": true
-  },
   "rules": {
-    "no-unused-expressions": 0,
+    "//": "シャレオツコードの意図が undefined 代入だとわかりやすいので許可",
     "no-undef-init": 0
   },
   "globals": {
-    "$": false,
-    "jQuery": false,
     "fetch": false,
-    "Promise": false,
-    "HTMLCollection": false
+    "Promise": false
   }
 }
