--- a/public/stage7/.eslintrc
+++ b/public/stage7/.eslintrc
@@ -1,17 +1,16 @@
 {
-  "env": {
-    "browser": true,
-    "mocha": true
-  },
   "rules": {
-    "no-unused-expressions": 0,
-    "no-undef-init": 0
+    "//": "undefined 上書き問題のため、明示的な undefined 代入を許可",
+    "no-undef-init": 0,
+
+    "//": "== 演算子の振る舞いの問題の警告は誤警告",
+    "yoda": 0,
+
+    "//": "truthy, falsey を判定する問題のため、定数式を許可",
+    "no-constant-condition": 0
   },
   "globals": {
-    "$": false,
-    "jQuery": false,
     "fetch": false,
-    "Promise": false,
-    "HTMLCollection": false
+    "Promise": false
   }
 }
