--- a/public/.eslintrc
+++ b/public/.eslintrc
@@ -1,8 +1,14 @@
 {
   "env": {
-    "mocha": true
+    "mocha": true,
+    "browser": true,
+    "jquery": true
   },
   "globals": {
     "expect": false
+  },
+  "rules": {
+    "//": "chai の expect 構文が誤警告になるため無視",
+    "no-unused-expressions": 0
   }
 }
