Switch lincense to MIT from BSD

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "training"
   ],
   "author": "Kuniwak",
-  "license": "BSD",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mixi-inc/JavaScriptTraining/issues"
   },
