--- a/package.json
+++ b/package.json
@@ -23,20 +23,18 @@
   },
   "homepage": "https://github.com/mixi-inc/JavaScriptTraining",
   "devDependencies": {
-    "body-parser": "^1.12.0",
-    "event-stream": "^3.3.0",
-    "express": "^4.12.2",
-    "gulp": "^3.8.11",
-    "gulp-csslint": "^0.1.5",
-    "gulp-eslint": "^0.6.0",
-    "gulp-help": "^1.3.3",
-    "gulp-nodemon": "^1.0.5",
-    "gulp-util": "^3.0.4",
-    "merge-stream": "^0.1.7",
-    "stream-combiner2": "^1.0.2"
+    "body-parser": "1.14.0",
+    "express": "4.13.3",
+    "gulp": "3.9.0",
+    "gulp-csslint": "0.2.0",
+    "gulp-eslint": "1.0.0",
+    "gulp-help": "1.6.1",
+    "gulp-nodemon": "2.0.4",
+    "gulp-util": "3.0.6",
+    "merge-stream": "1.0.0"
   },
   "dependencies": {
-    "bower": "^1.3.12",
-    "reveal-md": "0.0.16"
+    "bower": "1.5.2",
+    "reveal-md": "0.0.20"
   }
 }
