--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "body-parser": "1.14.0",
     "express": "4.13.3",
     "gulp": "3.9.0",
-    "gulp-csslint": "0.2.0",
     "gulp-eslint": "1.0.0",
     "gulp-help": "1.6.1",
     "gulp-nodemon": "2.0.4",
-    "gulp-util": "3.0.6",
-    "merge-stream": "1.0.0"
+    "gulp-util": "3.0.6"
   },
   "dependencies": {
     "bower": "1.5.2",
