Make the node version explicit

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "bugs": {
     "url": "https://github.com/mixi-inc/JavaScriptTraining/issues"
   },
+  "engines": {
+    "node": "~4.1.0"
+  },
   "homepage": "https://github.com/mixi-inc/JavaScriptTraining",
   "devDependencies": {
     "body-parser": "1.14.0",
